# SimpleArt

./: README.md
SimpleArt/: CMakeLists.txt  SimpleArtClasses.h  SimpleArtFunctions.h
SimpleArt/Instruments/: brushesFunctions.cpp  bucket.cpp  chooseInstrument.cpp  chooseInstrumentButton.cpp  generateInstrumentsMenu.cpp  line.cpp  pipette.cpp  trueLine.cpp
SimpleArt/MainWIndow/: main.cpp
SimpleArt/Palette/: Mcolour.cpp  Mcolour.h  chooseColour.cpp  drawBarsInPalette.cpp  generatePalette.cpp  redrawMainColourInPalette.cpp
SimpleArt/Utilities/: Constants.h  serviceFunctions.cpp
